rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-16.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"
---
type_name: ~
description: ~
settings: ~
can_be_gap: ~
can_be_step: ~
marking_notes: ~
help_url: ~
published: ~
extensions:
  chemistry: "template:template_key"
  download_text_file: "template:template_key"
  eukleides: "template:template_key"
  geogebra: "template:template_key"
  graphs: "template:template_key"
  jsx_graph: "template:template_key"
  linear_algebra: "template:template_key"
  linear_codes: "template:template_key"
  optimisation: "template:template_key"
  permutations: "template:template_key"
  polynomials: "template:template_key"
  quantities: "template:template_key"
  random_person: "template:template_key"
  stats: "template:template_key"
  sqlite: "template:template_key"
  text: "template:template_key"
  written_number: "template:template_key"
input_widget:
  type: number
  hint:
    value: "file:path/to/file"
    static: false
  correct_answer: "file:path/to/file"
  allow_fractions: "template:template_key"
  allowed_notation_styles: "template:template_key"

