rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-17.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"

---
type_name: "template:template_key"
description: "template:template_key"
settings: "template:template_key"
can_be_gap: "template:template_key"
can_be_step: "template:template_key"
marking_notes: "template:template_key"
help_url: "template:template_key"
published: "template:template_key"
extensions:
  chemistry: "template:template_key"
  download_text_file: "template:template_key"
  eukleides: "template:template_key"
  geogebra: "template:template_key"
  graphs: "template:template_key"
  jsx_graph: "template:template_key"
  linear_algebra: "template:template_key"
  linear_codes: "template:template_key"
  optimisation: "template:template_key"
  permutations: "template:template_key"
  polynomials: "template:template_key"
  quantities: "template:template_key"
  random_person: "template:template_key"
  stats: "template:template_key"
  sqlite: "template:template_key"
  text: "template:template_key"
  written_number: "template:template_key"
input_widget:
  type: radiogroup
  hint:
    value:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    static: false
  correct_answer:
    content:
      nonjmetext§: "file:path/to/file"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  choices:
    value:
      - content:
          nonjmetext§: "file:path/to/file"
        placeholders:
          placeholder1:
            content:
              en: en value of placeholder1
              nl: nl value of placeholder1
            placeholders: {}
          placeholder2:
            content:
              en: en version of placeholder2
              nl: nl version of placeholder2
            placeholders: {}
      - content:
          nonjmetext§: "template:template_key"
        placeholders:
          placeholder1:
            content:
              en: en value of placeholder1
              nl: nl value of placeholder1
            placeholders: {}
          placeholder2:
            content:
              en: en version of placeholder2
              nl: nl version of placeholder2
            placeholders: {}
      - content: "file:path/to/file"
        placeholders:
          placeholder1:
            content:
              en: en value of placeholder1
              nl: nl value of placeholder1
            placeholders: {}
          placeholder2:
            content:
              en: en version of placeholder2
              nl: nl version of placeholder2
            placeholders: {}
      - "file:path/to/file"
      - "template:template_key"
    static: false

