rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-19.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"
---
type_name:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
description:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
settings:
  template_key: template_key
  default_value: ~
can_be_gap:
  template_key: template_key
  default_value: ~
can_be_step:
  template_key: template_key
  default_value: ~
marking_notes:
  template_key: template_key
  default_value: ~
help_url:
  content:
    nonjmetext§:
      template_key: template_key
      default_value: ~
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
published:
  template_key: template_key
  default_value: ~
extensions: "template:template_key"
input_widget:
  type: number
  hint:
    value: ~
    static: ~
  correct_answer: ~
  allow_fractions:
    value: false
    static: false
  allowed_notation_styles:
    value:
      - english
      - english-plain
      - english-si
      - european
      - european-plain
      - french-si
      - indian
      - scientific
      - swiss
      - "template:template_key"
      - template_key: template_key
        default_value: ~
    static: false

