rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-2.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"

---
type_name:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
description:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
settings: "template:template_key"
can_be_gap: "template:template_key"
can_be_step: "template:template_key"
marking_notes: "template:template_key"
help_url:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
published: "template:template_key"
extensions:
  chemistry: "template:template_key"
  download_text_file: "template:template_key"
  eukleides: "template:template_key"
  geogebra: "template:template_key"
  graphs: "template:template_key"
  jsx_graph: "template:template_key"
  linear_algebra: "template:template_key"
  linear_codes: "template:template_key"
  optimisation: "template:template_key"
  permutations: "template:template_key"
  polynomials: "template:template_key"
  quantities: "template:template_key"
  random_person: "template:template_key"
  stats: "template:template_key"
  sqlite: "template:template_key"
  text: "template:template_key"
  written_number: "template:template_key"
input_widget:
  type: string
  hint:
    value:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    static: "template:template_key"
  correct_answer:
    content:
      nonjmetext§: "template:template_key"
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  allow_empty:
    value: "template:template_key"
    static: "template:template_key"

