rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-21.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"

---
type_name:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
description:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
settings: ~
can_be_gap: ~
can_be_step: ~
marking_notes: ~
help_url:
  content: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
published: ~
extensions:
  chemistry: false
  download_text_file: false
  eukleides: false
  geogebra: false
  graphs: false
  jsx_graph: false
  linear_algebra: false
  linear_codes: false
  optimisation: false
  permutations: false
  polynomials: false
  quantities: false
  random_person: false
  stats: false
  sqlite: false
  text: false
  written_number: false
input_widget:
  type: radiogroup
  hint:
    value: "template:template_key"
    static: "template:template_key"
  correct_answer: "template:template_key"
  choices: ~

